[project]
name = "latentsync"
version = "0.1.0"
description = "LatentSync - Audio-conditioned latent diffusion for lip-sync"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "diffusers==0.32.2",
    "transformers==4.48.0",
    "accelerate==0.26.1",
    "einops==0.7.0",
    "omegaconf==2.3.0",
    "opencv-python==4.9.0.80",
    "mediapipe>=0.10.20",
    "python_speech_features==0.6",
    "librosa==0.10.1",
    "scenedetect==0.6.1",
    "ffmpeg-python==0.2.0",
    "imageio==2.31.1",
    "imageio-ffmpeg==0.5.1",
    "lpips==0.1.4",
    "face-alignment==1.4.1",
    "gradio==5.24.0",
    "huggingface-hub==0.30.2",
    "numpy==1.26.4",
    "kornia==0.8.0",
    "DeepCache==0.1.1",
    "decord>=0.6.0",
    "insightface>=0.7.3",
]

[tool.uv.sources]
# PyTorch CUDA 12.1 builds (Linux/Windows only - macOS uses CPU from PyPI)
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv]
dev-dependencies = []
